[package]
name = "website"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lhwdev/website"


[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-stream = "^0.3"
async-trait ="0.1"
futures = "^0.3"
futures-util = "^0.3"
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = [ "tera" ] }
serde_json = "^1"
entity = { path = "entity" }
migration = { path = "migration" }

sea-orm = { version = "^0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-sqlite", "macros" ] }
sea-orm-rocket = "^0.5.0"
