[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
sea-orm = { version = "^0.9.0", features = [ "runtime-tokio-native-tls", "sqlx-sqlite" ] }
chrono = "0.4"

